feat: add kafka and redis

--- a/bot/src/main/resources/application.yaml
+++ b/bot/src/main/resources/application.yaml
@@ -1,6 +1,15 @@
 app:
   telegram-token: ${TELEGRAM_TOKEN} # env variable
   access-type: orm
+  message-transport: kafka
+
+kafka:
+  topic:
+    chats: chats
+    remove-link: remove-link
+    add-link: add-link
+    list-links: get-links
+    events: events
 
 api:
   scrapper:
@@ -25,6 +34,18 @@ spring:
     hibernate:
       ddl-auto: validate
     open-in-view: false
+  kafka:
+    bootstrap-servers: localhost:19092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.LongSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: bot-consumer-group
+      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  redis:
+    host: localhost
+    port: 6379
 
 server:
   port: 8080
