--- a/scrapper/src/main/resources/application.yaml
+++ b/scrapper/src/main/resources/application.yaml
@@ -3,9 +3,10 @@ app:
   stackoverflow:
     key: ${SO_TOKEN_KEY}
     access-token: ${SO_ACCESS_TOKEN}
-  interval: 10000
+  interval: 10000000
   access-type: orm
   limit: 100
+  message-transport: kafka
 
 api:
   github:
@@ -21,6 +22,13 @@ db:
   username: ${DB_USER} # env variable
   password: ${DB_PASSWORD} # env variable
 
+kafka:
+  topic:
+    chats: chats
+    remove-link: remove-link
+    add-link: add-link
+    list-links: get-links
+    events: events
 
 spring:
   application:
@@ -35,6 +43,15 @@ spring:
     hibernate:
       ddl-auto: validate
     open-in-view: false
+  kafka:
+    bootstrap-servers: localhost:19092
+    consumer:
+      group-id: scrapper-consumer-group
+      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.LongSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 server:
   port: 8081
