feat: rework kafka

--- a/bot/src/main/resources/application.yaml
+++ b/bot/src/main/resources/application.yaml
@@ -1,14 +1,13 @@
 app:
   telegram-token: ${TELEGRAM_TOKEN} # env variable
   access-type: orm
-  message-transport: http
+  message-transport: kafka
 
 kafka:
   topic:
     chats: chats
-    remove-link: remove-link
-    add-link: add-link
-    list-links: get-links
+    links: links
+    list-links: list-links
     events: events
 
 api:
@@ -36,13 +35,8 @@ spring:
     open-in-view: false
   kafka:
     bootstrap-servers: localhost:19092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.LongSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
       group-id: bot-consumer-group
-      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   redis:
     host: localhost
     port: 6379
